--- a/index.html
+++ b/index.html
@@ -9,6 +9,68 @@
 <h1> Create your own resume in JSON format
   <script src="script.js"></script>
  </h1>
+ <div>
+  let myResume={
+ "basics": {
+   "name": "MOHAN SIVAKUMAR",
+   "email": "mohansivakumar359@gamil.com",
+   "phone": 8056229816,
+   "degree": "DME",
+   "location": {
+     "address": "30 Chinna Sayakar Street",
+     "postalCode": 632301,
+     "city": "Arani",
+     "state": "Tamilnadu",
+     "country": "India"
+   },
+   "profiles": [
+     {
+       "website": "https://www.linkedin.com/in/mohan-s-b3997912b//",
+       "github":"https://github.com/MOHAN SIVAKUMAR1994"
+     }
+   ]
+ },
+ "work": [
+   {
+     "company": "Psa Automobiles Pvt.Ltd",
+     "position": "Quality Engg",
+     "startDate": "2020-11-04",
+     "endDate": "2023-08-15",
+     "summary": "i am the Quality Engg handling various quality defect and control lots of experience",
+   },
+ ],
+ "education": [
+   {
+     "institution": "Dusi Polytechnic College",
+     "department": "Mechanical",
+     "studyType": "fulltime",
+     "batch start year": 2013,
+     "batch end year": 2015,
+     "gpa": 7.3,
+   }
+ ],
+ "skills": [
+   {
+     "name": "python,javascript",
+     "level": "beginer",
+     "project": [
+       "automatic attendance maintaing system using python language"
+     ]
+   }
+ ],
+ "languages": [
+   {
+     "language": "Tamil,Enlish",
+   }
+ ],
+ "interests": [
+   {
+     "name": "script writter,youtuber,",
+   }
+ ]
+}
+console.log(myResume);
+ </div>
 
 </body>
 </html>
